%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  serializedVersion: 2
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Mini_Anim
  m_AnimatorParameters:
  - m_Name: walk
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: sleep
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: dance
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: something
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 1107850647283191883}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1107 &1107850647283191883
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 0}
  m_States:
  - {fileID: 1102928067222418847}
  - {fileID: 1102873088643196854}
  - {fileID: 1102092052053331667}
  - {fileID: 1102336692496186409}
  - {fileID: 1102720780527510173}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
  - first: {fileID: 1102928067222418847}
    second:
    - {fileID: 1101477203972046623}
    - {fileID: 1101715054394547232}
    - {fileID: 1101682778847746427}
    - {fileID: 1101148275836960888}
  - first: {fileID: 1102873088643196854}
    second:
    - {fileID: 1101459763075736335}
  - first: {fileID: 1102092052053331667}
    second:
    - {fileID: 1101158862603595835}
  - first: {fileID: 1102336692496186409}
    second:
    - {fileID: 1101241006235343728}
  - first: {fileID: 1102720780527510173}
    second:
    - {fileID: 1101084288701764743}
  m_MotionSetCount: 0
  m_AnyStatePosition: {x: 0, y: -250, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
--- !u!1102 &1102928067222418847
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 082d890c89d833c408e6b201bf9474d0, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 0, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag:
--- !u!1101 &1101477203972046623
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102336692496186409}
  m_TransitionDuration: 0.125
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: sleep
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &1101715054394547232
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102873088643196854}
  m_TransitionDuration: 0.125
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: walk
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &1101682778847746427
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102092052053331667}
  m_TransitionDuration: 0.125
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: dance
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &1101148275836960888
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102720780527510173}
  m_TransitionDuration: 0.125
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: something
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &1102873088643196854
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: walk
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 95e7e50872115fe44aba7ce39c518701, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 250, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag:
--- !u!1101 &1101459763075736335
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102928067222418847}
  m_TransitionDuration: 0.24590164
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: walk
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &1102092052053331667
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: dance
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: d3a23181c0b4e2c4695870a106d70b0b, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 500, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag:
--- !u!1101 &1101158862603595835
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102928067222418847}
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: dance
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &1102336692496186409
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: sleep
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 957c58ff038b00748b92de5b1ddd4263, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 0, y: 250, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag:
--- !u!1101 &1101241006235343728
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102928067222418847}
  m_TransitionDuration: 0.078947365
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: sleep
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &1102720780527510173
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: something
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: c2fd17f402edca848a867cdfd83c0fd4, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 250, y: 250, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag:
--- !u!1101 &1101084288701764743
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102928067222418847}
  m_TransitionDuration: 0.11538461
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: something
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
